[tool.poetry]
name = "spacecutter-lightning"
version = "0.2.0"
description = "PyTorch-Lightning callback for spacecutter"
authors = ["Soof Golan <pypi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spacecutter_lightning"}]

[tool.poetry.dependencies]
python = "^3.8"
spacecutter = {git = "https://github.com/soof-golan/spacecutter.git", rev = "0.3.3"}
pytorch-lightning = "^1.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
