[tool.poetry]
name = "spacecutter-lightning"
version = "1.0.1"
description = "PyTorch-Lightning callback for spacecutter"
authors = ["Soof Golan <pypi@soofgolan.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "spacecutter_lightning"}]
homepage = "https://github.com/soof-golan/spacecutter-lightning"
repository = "https://github.com/soof-golan/spacecutter-lightning"

[tool.poetry.dependencies]
python = "^3.8"

pytorch-lightning = "^2.0.1"
spacecutter-torch = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"